--- a/index.html
+++ b/index.html
@@ -23,6 +23,18 @@
 </head>
 
 <body>
+<script LANGUAGE="javascript">
+<!--
+loopy()
+function loopy() {
+var sWord =""
+while (sWord != "MarkLovesDanny") {              //改为你自己的密码！
+	sWord = prompt("输入正确密码才能登陆!")
+}
+alert("AH...你好，欢迎光临！")
+}
+//-->
+</script>
 
 <div class="loading" id="onlo">
 	<span>Just a moment please...</span>
